Ensure PyYAML is installed
Installing PyYAML before installing all the dependencies meant that it
wasn't installed as it already existed on the system. I'm going to have
the build script use the build directory for dependencies, and also
adding it as an explicit dependency, seeing as we actually use it now
directly, anyway.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,7 @@ version: 0.1
 phases:
   install:
     commands:
-      - echo "Running build dependencies install"
-      - pip install PyYAML
+      - echo "Nothing to install"
   pre_build:
     commands:
       - echo "Running pre-build"
