--- a/templates/routes.yaml
+++ b/templates/routes.yaml
@@ -6,5 +6,6 @@
 '/errors/400': 'errors/400.html'
 '/errors/404': 'errors/404.html'
 '/errors/500': 'errors/500.html'
+'/letters/20200602': 'letters/20200602.html'
 
 # vim: ts=2 sts=2 sw=2 expandtab
