--- a/static_routes.yaml
+++ b/static_routes.yaml
@@ -5,6 +5,6 @@
 'favicon': '/favicon.ico'
 'keybase': '/keybase.txt'
 'robots': '/robots.txt'
-'openpgpkey': '/.well-known/openpgpkey/hu/{hash+}'
+'openpgpkey': '/.well-known/openpgpkey/{pgpdata+}'
 
 # vim: ts=2 sts=2 sw=2 expandtab
