Fix formatting for function Architectures
Apparently it wants this as a list... despite that it really only wants
ONE defined, and it wouldn't make any sense to have more than one.

--- a/app-sam-template.yaml
+++ b/app-sam-template.yaml
@@ -3,7 +3,8 @@ Transform: AWS::Serverless-2016-10-31
 
 Globals:
   Function:
-    Architectures: arm64
+    Architectures:
+      - arm64
     Runtime: python3.12
     Layers:
       - !Ref BrwyattLayer
